--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,59 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@layer base {
+  
+:root  {
+  --background: 216 100% 95%;
+  --foreground: 216 5% 0%;
+  --card: 216 50% 90%;
+  --card-foreground: 216 5% 10%;
+  --popover: 216 100% 95%;
+  --popover-foreground: 216 100% 0%;
+  --primary: 216 90% 27%;
+  --primary-foreground: 0 0% 100%;
+  --secondary: 216 30% 70%;
+  --secondary-foreground: 0 0% 0%;
+  --muted: 178 30% 85%;
+  --muted-foreground: 216 5% 35%;
+  --accent: 178 30% 80%;
+  --accent-foreground: 216 5% 10%;
+  --destructive: 0 100% 30%;
+  --destructive-foreground: 216 5% 90%;
+  --border: 216 30% 50%;
+  --input: 216 30% 18%;
+  --ring: 216 90% 27%;
+  --radius: 0.5rem;
+}
+.dark  {
+  --background: 216 50% 5%;
+  --foreground: 216 5% 90%;
+  --card: 216 50% 0%;
+  --card-foreground: 216 5% 90%;
+  --popover: 216 50% 5%;
+  --popover-foreground: 216 5% 90%;
+  --primary: 216 90% 27%;
+  --primary-foreground: 0 0% 100%;
+  --secondary: 216 30% 10%;
+  --secondary-foreground: 0 0% 100%;
+  --muted: 178 30% 15%;
+  --muted-foreground: 216 5% 60%;
+  --accent: 178 30% 15%;
+  --accent-foreground: 216 5% 90%;
+  --destructive: 0 100% 30%;
+  --destructive-foreground: 216 5% 90%;
+  --border: 216 30% 18%;
+  --input: 216 30% 18%;
+  --ring: 216 90% 27%;
+  --radius: 0.5rem;
+}
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer base {
+  * {
+    @apply border-border;
   }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  body {
+    @apply bg-background text-foreground;
+  }
 }
